main/default/objects/Enrolments_objects__c/Enrolments_objects__c.object-meta.xml
<CustomObject>
    <label>Enrollments object</label>
    <nameField>
        <label>Enrollments objects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollments objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>