main/default/objects/Enrolments_objects__c/fields/Course_c__c.field-meta.xml
<CustomField>
    <fullName>Course_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>