main/default/objects/Enrolments_objects__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Instructor__c</referenceTo>
    <relationshipName>Enrolments_objects</relationshipName>
    <type>Lookup</type>
</CustomField>