main/default/objects/Enrolments_objects__c/fields/Instructor_c__c.field-meta.xml
<CustomField>
    <fullName>Instructor_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Instructor__c</referenceTo>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>