main/default/objects/Enrolments_objects__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipName>Enrolments_objects</relationshipName>
    <type>Lookup</type>
</CustomField>