main/default/objects/Enrolments_objects__c/recordTypes/New_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>New_Enrollment</fullName>
    <active>true</active>
    <label>New Enrollment</label>
</RecordType>