main/default/objects/Enrolments_objects__c/recordTypes/Re_enrollment.recordType-meta.xml
<RecordType>
    <fullName>Re_enrollment</fullName>
    <active>true</active>
    <label>Re-enrollment</label>
</RecordType>