main/default/objects/Enrolments_objects__c/validationRules/Fees_Must_Be_Paid_Before_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_Must_Be_Paid_Before_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Enrollement_Status__c , &quot;Approved&quot;),
NOT(Fees_Paid__c)
)</errorConditionFormula>
    <errorMessage>Fees must be paid before approving an enrollment</errorMessage>
</ValidationRule>